changed .pokePage CSS justify-content to left to prevent weird spacing

--- a/static/style.css
+++ b/static/style.css
@@ -169,8 +169,9 @@ body {
 .pokePage {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: left;
   width: 100%;
+  align-items: left;
 }
 
 :root {
